stop shadows overlapping

--- a/less/modules/panels.less
+++ b/less/modules/panels.less
@@ -96,6 +96,7 @@ a.grid__panel {
     .grid__panel-body,
     .grid__panel-footer {
         .drop-shadow.outside();
+        z-index: @z-index-base;
     }
 }
 
